--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+.demo-logo {
+  width: 80px;
+  min-width: 120px;
+  height: 100%;
+  border-radius: 6px;
+  margin-inline-end: 24px;
+  text-align: center;
+}
+.demo-logo img {
+  width: 80%;
+  height: 100%;
+}
